Changed to new logging, static implementation for now which is not ideal, but it's not worth spending the time to fix it right now